@@ -10,16 +10,25 @@ import edu.colorado.phet.common.phetcommon.util.RichSimpleObserver;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 
 /**
+ * Shows the fraction as a set of vertical bars
+ *
  * @author Sam Reid
  */
 public class VerticalBarChosenRepresentationNode extends ChosenRepresentationNode {
-    double dim = 30;
-
     public VerticalBarChosenRepresentationNode( Property<ChosenRepresentation> chosenRepresentation, final Property<Integer> numerator, final Property<Integer> denominator ) {
         super( chosenRepresentation, ChosenRepresentation.VERTICAL_BAR );
 
         new RichSimpleObserver() {
-            @Override public void update() {
+            public void update() {
+
+                //6 bars fit on the screen
+                int distanceBetween = 25;
+                double spaceForBars = FractionsIntroCanvas.WIDTH_FOR_REPRESENTATION - distanceBetween * 5;
+                final double width = spaceForBars / 6;
+
+                double barHeight = 200;
+                double cellHeight = barHeight / denominator.get();
+
                 removeAllChildren();
 
                 int numBars = numerator.get() / denominator.get();
@@ -32,12 +41,13 @@ public class VerticalBarChosenRepresentationNode extends ChosenRepresentationNod
                 for ( int i = 0; i < numBars; i++ ) {
                     for ( int k = 0; k < denominator.get(); k++ ) {
                         Color color = numElementsAdded < numerator.get() ? FractionsIntroCanvas.FILL_COLOR : Color.white;
-                        addChild( new PhetPPath( new Rectangle2D.Double( x, y, dim, dim ), color, new BasicStroke( 2 ), Color.black ) );
-                        y = y + dim;
+                        addChild( new PhetPPath( new Rectangle2D.Double( x, y, width, cellHeight ), color, new BasicStroke( 2 ), Color.black ) );
+                        y = y + cellHeight;
                         numElementsAdded++;
                     }
+                    //Move to next bar
                     y = 0;
-                    x = x + ( dim + 5 ) * 2;
+                    x = x + width + distanceBetween;
                 }
             }
         }.observe( numerator, denominator );
