@@ -1,3 +1,4 @@
+Made 6 vertical bars exactly fit the width of the screen
 Made pies exactly fit the width of the screen
 Constrain the horizontal bar representation to fill the screen when there are 6 and to take up 2 rows
 Fixed: Oddly, the circles look well centered and such when there are 6 "wholes" but 6 circles divided into "fifths" goes slightly off screen.
